# restcli

./: Cargo.toml  README.md  config.yaml
src/: cli.rs  config.rs  format.rs  lib.rs  main.rs  prefix.rs
test/: sample-data.yaml  sample-output.txt
